feat: add booking and room management entities, repositories, and update related DTOs